appId: ${APP_ID}
---
- tapOn: Back
- assertVisible: Are you sure\?
- tapOn: Discard
- assertVisible: Start run
